--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,18 @@ body {
     text-wrap: balance;
   }
 }
+@layer utilities {
+  .loader {
+    @apply ease-linear rounded-full border-4 border-t-4 border-blue-200 h-12 w-12 mb-4;
+    border-top-color: transparent;
+    animation: spin 1s linear infinite;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
